refactored some of the data processing code

--- a/notebooks/inspect_sparkov_dataset.ipynb
+++ b/notebooks/inspect_sparkov_dataset.ipynb
@@ -5,7 +5,7 @@
    "id": "0b14992f",
    "metadata": {},
    "source": [
-    "### DATA PROCESSING\n",
+    "## DATA PROCESSING\n",
     "\n",
     "Clean and prepare the 'fraud_train' and 'fraud_test.csv' files from the Sparkov Simulated Transactions Dataset"
    ]
@@ -15,14 +15,14 @@
    "id": "2c4d57f9",
    "metadata": {},
    "source": [
-    "## Inspect initial rows\n",
+    "# Inspect initial rows\n",
     "\n",
     "First I'll look import both the 'fraudTrain.csv' and 'fraudTest.csv' files, join them together and look at the first 5 rows to see the column names, the data types, and any obvious issues"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ec27dcdb",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,6 @@
    "source": [
     "#import libraries\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "from pathlib import Path\n",
     "\n",
     "#create variable for path to files\n",
@@ -268,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "59da7839",
    "metadata": {},
    "outputs": [
@@ -347,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "db71418d",
    "metadata": {},
    "outputs": [
@@ -372,7 +371,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +386,7 @@
    "id": "28787bdb",
    "metadata": {},
    "source": [
-    "## Takeaways\n",
+    "# Takeaways\n",
     "\n",
     " - Categories ending in '_net', e.g. 'shopping_net', clearly indicate online transactions (card-not-present)\n",
     " - All other categories are likely card present transactions\n",
@@ -396,27 +395,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5f56f610",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os\n",
+    "module_path = os.path.abspath(os.path.join('..', 'src'))\n",
+    "if module_path not in sys.path:\n",
+    "    sys.path.append(module_path)\n",
+    "\n",
+    "from data_clean_sparkov import process_sparkov\n",
+    "\n",
+    "df_pos = process_sparkov()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "7bea071a",
+   "id": "b312d6bf",
    "metadata": {},
    "source": [
-    "## Velocity Check on Cleaned Data\n",
+    "# Velocity Check on Cleaned Data\n",
     "\n",
-    "read back in the now cleaned data and check the statistics about the velocity and plot the histogram as with the caixa data"
+    "check the statistics about the velocity of the cleaned data and plot the histogram as with the caixa data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "02a54f7d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    1.552924e+06\n",
-       "mean     1.002968e+00\n",
-       "std      5.452806e-02\n",
+       "count    1.555238e+06\n",
+       "mean     1.001478e+00\n",
+       "std      3.845280e-02\n",
        "min      1.000000e+00\n",
        "50%      1.000000e+00\n",
        "90%      1.000000e+00\n",
@@ -426,16 +442,14 @@
        "Name: card_id, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_pos = pd.read_csv(\"../data/processed/sparkov_pos_sorted.csv\",\n",
-    "                     parse_dates=[\"timestamp\"])\n",
-    "df_pos[\"bucket_60s\"] = df_pos[\"timestamp\"].dt.floor(\"60s\")\n",
-    "vel = (df_pos.groupby([\"merchant_id\",\"bucket_60s\"])\n",
+    "df_pos[\"bucket_30s\"] = df_pos[\"timestamp\"].dt.floor(\"30s\")\n",
+    "vel = (df_pos.groupby([\"merchant_id\",\"bucket_30s\"])\n",
     "       .card_id.nunique())\n",
     "vel.describe(percentiles=[.90,.95,.99])"
    ]
