refactored the code to insert synthetic data spikes

--- a/notebooks/inspect_caixa_dataset.ipynb
+++ b/notebooks/inspect_caixa_dataset.ipynb
@@ -5,7 +5,7 @@
    "id": "5e22f94e",
    "metadata": {},
    "source": [
-    "### DATA PROCESSING\n",
+    "## DATA PROCESSING\n",
     "\n",
     "Clean and prepare the 'transactions_data.csv' file from the Caixa Bank Real World Dataset"
    ]
@@ -15,7 +15,7 @@
    "id": "1d19bb48",
    "metadata": {},
    "source": [
-    "## Inspect initial rows\n",
+    "### Inspect initial rows\n",
     "\n",
     "First I'll look at the first 5,000 rows from the 'transactions_data.csv' file\n",
     "to see all of its column names, the data types, and any obvious issues"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "id": "b0af917a",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
        "4    NaN  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "id": "18b3d131",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,14 +223,14 @@
    "id": "9973a82d",
    "metadata": {},
    "source": [
-    "## Create a data type map\n",
+    "### Create a data type map\n",
     "\n",
     "This map makes pandas read these columns as string values. Having the 'amount' field in this form allows for removing unwanted characters, such as '€', from the fields later on"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "de639ab1",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
    "id": "5fc48d39",
    "metadata": {},
    "source": [
-    "## Loop to clean data in sections (200,000 rows at a time)\n",
+    "### Loop to clean data in sections (200,000 rows at a time)\n",
     "\n",
     "For each section:\n",
     " - filter for card present transactions\n",
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "18f04f64",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
    "id": "03bd72a7",
    "metadata": {},
    "source": [
-    "## Reload and check the new file\n",
+    "### Reload and check the new file\n",
     "\n",
     "Reload the new CSV file to memory, sort by timestamp and merchant id so velocity stats can be checked later\n",
     "\n",
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "42b63b76",
    "metadata": {},
    "outputs": [
@@ -450,7 +450,7 @@
        "1845986  Pleasant Prairie             WI  53158.0  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
    "source": [
     "#reread the now sorted data to ensure it is correctly formatted\n",
     "#parse the timestamp column as dates (otherwise read as strings)\n",
-    "df = pd.read_csv(\"../data/processed/pos_sorted.csv\", parse_dates=[\"timestamp\"])\n",
+    "df = pd.read_csv(\"../data/processed/caixa_pos_sorted.csv\", parse_dates=[\"timestamp\"])\n",
     "#sort by merhcant id and time\n",
     "df.sort_values([\"merchant_id\", \"timestamp\"], inplace=True)\n",
     "df.head()\n"
@@ -469,7 +469,7 @@
    "id": "ab55ec0b",
    "metadata": {},
    "source": [
-    "## Calculate the transaction velocity per merchant\n",
+    "### Calculate the transaction velocity per merchant\n",
     "\n",
     "All the timestamps in this dataset are rounded to the nearest minute, 60s  buckets are the smallest windows that can be used\n",
     "\n",
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "id": "54a423c4",
    "metadata": {},
    "outputs": [
@@ -498,7 +498,7 @@
        "Name: card_id, dtype: float64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
    "id": "44a50c8c",
    "metadata": {},
    "source": [
-    "## Plot velocity distribution\n",
+    "### Plot velocity distribution\n",
     "\n",
     "Using a histogram shows that there are rarely more than two different cards used at the same merchant in one minute\n",
     "\n",
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "id": "de80fa74",
    "metadata": {},
    "outputs": [
@@ -555,7 +555,7 @@
    "id": "5eda5813",
    "metadata": {},
    "source": [
-    "## What was learned\n",
+    "### What was learned\n",
     "\n",
     " - This CaixaBank swipe data showed that the 99 th percentile is ≤ 2 cards/minute\n",
     "  and the maximum unique cards in a minute is 6  \n",
