adjusted sparkov inspection markdown

--- a/notebooks/inspect_sparkov_dataset.ipynb
+++ b/notebooks/inspect_sparkov_dataset.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "id": "ec27dcdb",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "id": "59da7839",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,6 @@
     }
    ],
    "source": [
-    "\n",
     "#get datatypes for each column\n",
     "display(sample.dtypes)\n",
     "#check if any of the values in the data are NULL\n",
@@ -346,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "id": "db71418d",
    "metadata": {},
    "outputs": [
@@ -371,7 +370,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "id": "5f56f610",
    "metadata": {},
    "outputs": [],
@@ -423,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "id": "02a54f7d",
    "metadata": {},
    "outputs": [
@@ -442,7 +441,7 @@
        "Name: card_id, dtype: float64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "id": "9eaabd2a",
    "metadata": {},
    "outputs": [
@@ -502,12 +501,12 @@
    "source": [
     "### Inject Spikes and Bursts into data\n",
     "\n",
-    "Then retest the velocity "
+    "Using the insert_spikes_to_data function from the inset_spike.py file, artificial merchant velocity spikes and card bursts are injected into the code. Then the velocity is retested to ensure the data will now allow a baseline detector to be made."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "id": "f1a9156b",
    "metadata": {},
    "outputs": [
@@ -675,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 51,
    "id": "1fb25527",
    "metadata": {},
    "outputs": [
@@ -694,7 +693,7 @@
        "Name: card_id, dtype: float64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 52,
    "id": "a15cd3ce",
    "metadata": {},
    "outputs": [
@@ -737,7 +736,7 @@
    "id": "edab23f0",
    "metadata": {},
    "source": [
-    "## OUTCOME\n",
+    "### OUTCOME\n",
     "\n",
     "Now we can see that the max distinct cards per bucket is 16, allowing us to run baseline velocity spike tests"
    ]
