--- a/notebooks/inspect_sparkov_dataset.ipynb
+++ b/notebooks/inspect_sparkov_dataset.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "ec27dcdb",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "59da7839",
    "metadata": {},
    "outputs": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "db71418d",
    "metadata": {},
    "outputs": [
@@ -370,7 +370,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,8 +394,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5cb3a91f",
+   "metadata": {},
+   "source": [
+    "### Clean Dataset\n",
+    "\n",
+    "call the process_sparkov function from the data celaning script to pre-process the data for use in this project"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "5f56f610",
    "metadata": {},
    "outputs": [],
@@ -405,6 +415,9 @@
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
     "\n",
+    "import importlib\n",
+    "import data_clean_sparkov\n",
+    "importlib.reload(data_clean_sparkov)\n",
     "from data_clean_sparkov import process_sparkov\n",
     "\n",
     "df_pos = process_sparkov()"
@@ -422,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "id": "02a54f7d",
    "metadata": {},
    "outputs": [
@@ -441,7 +454,7 @@
        "Name: card_id, dtype: float64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "9eaabd2a",
    "metadata": {},
    "outputs": [
@@ -506,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "id": "f1a9156b",
    "metadata": {},
    "outputs": [
@@ -674,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "id": "1fb25527",
    "metadata": {},
    "outputs": [
@@ -693,7 +706,7 @@
        "Name: card_id, dtype: float64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "id": "a15cd3ce",
    "metadata": {},
    "outputs": [
